[metadata]
name = glotlib
version = 0.9.6
author = Terry Greeniaus
author_email = terry.greeniaus@gmail.com
description = Library for creating plots using OpenGL.
long_description = Library for creating plots using OpenGL.
long_description_content_type = text/x-rst
keywords = glotlib
url = https://github.com/tgree/glotlib
license = LGPLv2
license_files = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
python_requires = >=3.7
install_requires =
    freetype-py
    glfw
    PyOpenGL
    PyOpenGL_accelerate
packages =
    glotlib
    glotlib.font_files
    glotlib.shaders

[options.package_data]
glotlib =
    *font_files/*ttf_bitstream_vera_1_10/*
    *shaders/*.frag
    *shaders/*.vert
